[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Boss.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Boss/Boss.png" type="Texture" id=2]
[ext_resource path="res://Scripts/BossAttackCollisionShape.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("BossSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BossSprite/Area2D/BossAttackCollisionShape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -47.6657, -20.7652 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BossSprite/Area2D/BossAttackCollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("BossSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("BossSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 24.5968
height = 65.6989

[node name="Boss" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="BossSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="Area2D" type="Area2D" parent="BossSprite"]

[node name="BossAttackCollisionShape" type="CollisionShape2D" parent="BossSprite/Area2D"]
position = Vector2( -47.6657, -20.7652 )
shape = SubResource( 3 )
disabled = true
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/stunned = SubResource( 6 )

[node name="BossCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.3597 )
shape = SubResource( 7 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 3.0
[connection signal="body_entered" from="BossSprite/Area2D" to="BossSprite/Area2D/BossAttackCollisionShape" method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
